# mesa-terakan-ai-upstreamed

./: .gitignore  AGENTS.md  LICENSE  README.md
.mimocode/plans/: 1781379190946-silent-orchid.md
docs/: BUILD.md  PACKAGING.md  PORTING.md  ROADMAP.md  UPSTREAM.md  VULKAN_STATUS.md
packaging/archlinux/: 0001-fix-c23.patch  0002-fix-c23-pthread-casts.patch  0010-compute-mvp.patch  PKGBUILD  terakan-dx-setup  terakan-vulkan-setup  terakan-vulkan32-setup  terakan.conf  vulkan-terakan.install
patches/: 0001-fix-c23.patch  0002-fix-c23-pthread-casts.patch  0003-bump-api-version-1.1.patch  0004-implement-cmd-blit-image2.patch  0005-implement-scaled-blit-image2.patch  0006-blit-batch-and-dynamic-indexing-features.patch  0007-implement-draw-indirect.patch  0008-vk-ext-descriptor-indexing.patch  0010-compute-mvp.patch
scripts/: apply-patches.sh  terakan-test-capabilities  terakan-test-compute  terakan-test-compute.c  terakan-test-copy-to-mip.c  terakan-test-mipmap-blitz  terakan-test-mipmap-blitz.c  terakan-test-vk11.c  terascale_icd.deploy.json
src/amd/terascale/vulkan/: meson.build  terakan_app_config_compute.c  terakan_app_config_compute.h  terakan_app_config_draw.c  terakan_command_buffer.c  terakan_command_buffer.h  terakan_hw_config_compute.c  terakan_hw_config_compute.h  terakan_hw_config_draw.c  terakan_hw_config_sqk.c  terakan_instance.h  terakan_physical_device.c  terakan_pipeline_layout.c  terakan_push_constants.h  terakan_shader.c  terakan_vk_dispatch.c  terakan_vk_draw.c  terakan_vk_pipeline_compute.c  terakan_vk_pipeline_compute.h  terakan_vk_pipeline_graphics.c  terakan_vk_state.c
src/amd/terascale/vulkan/meta/: terakan_meta.c  terakan_meta.h  terakan_meta_blit_image.c  terakan_meta_copy_buffer_image.c  terakan_meta_impl.h
src/c11/: threads.h
src/c11/impl/: threads_posix.c
src/gallium/drivers/r600/: r600_pipe.h
src/gallium/drivers/r600/sfn/: sfn_shader.cpp
src/util/: cnd_monotonic.c
